--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -6,7 +6,7 @@
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone" >
     <header>
         <nav>
             <ul>
@@ -71,4 +71,5 @@
         <p>Made by YOUR NAME - <a href="https://your-link.example.com" target="_blank">here</a>.</p>
     </footer>
 </body>
+
 </html>
