--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -12,13 +12,12 @@
   <header>
     <div class="logo">
       <img src="css_advanced/images/logo.png" alt="SmileSchool Logo" width="30">
-
     </div>
     <nav>
       <ul>
-        <li><a href="#">COURSE</a></li>
-        <li><a href="#">PRICING</a></li>
-        <li><a href="#">LOGIN</a></li>
+        <a href="#">COURSE</a>
+        <a href="#">PRICING</a>
+        <a href="#">LOGIN</a>
       </ul>
     </nav>
   </header>
@@ -32,7 +31,7 @@
       <div class="subtext">
         Learn <span>from the pros</span>
       </div>
-
+      
       <div class="profiles">
         <div class="profile">
           <img src="./images/1.png" alt="Phillip Massey">
@@ -57,8 +56,8 @@
       </div>
     </div>
   </section>
-  
-        <section>
+
+  <section>
             <div>
                 <img src="./images/Bitmap.png" alt="image">
             </div>
