--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <div class="logo">
-      <img src="css_advanced/images/logo.png" alt="SmileSchool Logo" width="30">
+      <img src=".images/logo.png" alt="SmileSchool Logo" width="30">
     </div>
     <nav>
       <ul>
@@ -29,7 +29,7 @@
       <button class="btn">Register for free</button>
 
       <div class="subtext">
-        Learn <span>from the pros</span>
+        <span>Learn</span> from the pros
       </div>
       
       <div class="profiles">
