--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -156,4 +156,33 @@
   </div>
 </section>
 
+<section class="membership-section">
+    <h2><span>Free</span> membership</h2>
+
+    <div class="features">
+      <div class="feature">
+        <div class="icon"><img src="./images/smile.png" alt=""></div>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="feature">
+        <div class="icon"><img src="./images/smile.png" alt=""></div>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="feature">
+        <div class="icon"><img src="./images/smile.png" alt=""></div>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="feature">
+        <div class="icon"><img src="./images/smile.png" alt=""></div>
+        <h3>Lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+
+    <button class="cta-btn">REGISTER FOR FREE</button>
+  </section>
+
   
