--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -185,4 +185,49 @@
     <button class="cta-btn">REGISTER FOR FREE</button>
   </section>
 
-  
+   <section class="faq-section">
+    <h2>F.A.Q.</h2>
+    <div class="faq-container">
+      <div class="faq-item">
+        <h3>How does this work?</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+      </div>
+      <div class="faq-item">
+        <h3>How does this work?</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+      </div>
+      <div class="faq-item">
+        <h3>How does this work?</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+      </div>
+      <div class="faq-item">
+        <h3>How does this work?</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-left">
+      <img src="images/logo.png" alt="">
+    </div>
+
+    <div class="footer-center">
+      <p>©smileschool 2020</p>
+    </div>
+
+    <div class="footer-right">
+      <a href="#"><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-facebook-128.png" alt="Facebook"></a>
+      <a href="#"><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-128.png" alt="Twitter"></a>
+      <a href="#"><img src="https://cdn4.iconfinder.com/data/icons/picons-social/57/38-instagram-2-128.png" alt="Instagram"></a>
+    </div>
+  </footer>
+ 
